# SolanaTradeBot

./: .env.example  .gitignore  .replit  AGENTS_AND_SIGNALS_FIX.md  AI_PREDICTION_TRADER_PLAN.md  API_VERIFICATION.md  AUTONOMOUS_TRADER_IMPLEMENTATION.md  AUTONOMOUS_TRADING_SYSTEM.md  BACKTESTING_GUIDE.md  BACKTEST_AND_LIVE_TRADING_SUMMARY.md  BRANCH_MERGE_GUIDE.md  BUDGET_AND_QUANT_FEATURES.md  CODE_REVIEW_IMPROVEMENTS.md  CODE_REVIEW_IMPROVEMENTS_SUMMARY.md  COMPLETE_IMPLEMENTATION.md  CORRECTED_SOLANA_INTEGRATION.md  DEPLOYMENT_GUIDE.md  DEXSCREENER_API_GUIDE.md  DEXSCREENER_MIGRATION.md  DRAWDOWN_FIX.md  ERROR_REVIEW_SUMMARY.md  FEATURES.md  FINAL_SUMMARY.md  FIXES_NEEDED.md  FUTURISTIC_UI_GUIDE.md  HISTORICAL_DATA_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_QUICKSTART.md  INTEGRATION_REVIEW.md  LIVE_TRADING_DEPLOYMENT.md  LOGIC_VERIFICATION.md  MAINNET_READINESS.md  MERGE_TO_MAIN.md  MOBULA_API_INTEGRATION.md  ORACLE_ERROR_HANDLING_IMPROVEMENTS.md  PDA_WITHDRAW_SETUP.md  PERFORMANCE_OPTIMIZATIONS.md  (+39 more)
attached_assets/: Pasted--winning-trades-as-f64-self-trade-history-len-as-f64-100-0-else-0-0-1762846814717_1762846814718.txt  Pasted-I-ll-create-a-complete-properly-structured-repository-that-you-can-fork-directly-into-Replit-Let-m-1762846772894_1762846772896.txt  Pasted-Ok-warp-Rejection-warp-reply-json-ApiResponse-new-market-data-Market-data-retrieved--1762846829113_1762846829114.txt  Pasted-SOLANA-RPC-URL-https-api-mainnet-beta-solana-com-WALLET-KEY-PATH-wallet-json-TRADING-ENABLED-fal-1762846782595_1762846782595.txt  Pasted-initial-balance-10000-0-current-balance-10000-0-trade-history-Vec-ne-1762846792276_1762846792277.txt  Pasted-let-response-HashMap-from-positions-to-string-portfolio-data--1762846822443_1762846822443.txt  Pasted-log-info-Sold-at-signal-size-signal-symbol-signal-price--1762846800634_1762846800634.txt  Pasted-prices-insert-symbol-to-string-new-price-let-market-data-super-tr-1762846807835_1762846807836.txt
backend/: .env.example  Cargo.toml  build_output.txt  warnings.txt
backend/src/: ai_orchestrator.rs  algorithm_tests.rs  api.rs  api_prediction_only.rs  api_v2.rs  autonomous_agent.rs  backtesting.rs  config.rs  database.rs  deepseek_ai.rs  dex_executor.rs  dex_screener.rs  enhanced_marketplace.rs  error_handling.rs  fee_optimization.rs  historical_data.rs  http_client.rs  jito_bam.rs  jupiter_integration.rs  key_management.rs  key_manager.rs  live_data_feed.rs  main.rs  main_prediction_only.rs  market_data.rs  ml_models.rs  monitoring.rs  moralis.rs  pda.rs  pda_withdraw_helper.rs  prediction_markets.rs  production_safeguards.rs  pumpfun.rs  quant_analysis.rs  reinforcement_learning.rs  risk_management.rs  rpc_client.rs  secure_config.rs  security.rs  signal_platform.rs  (+8 more)
frontend/: .env.production  index.html  package.json  vercel.json  vite.config.ts
sentiment_service/: .gitignore  README.md  analyzer.py  main.py  (+1 more)
(+33 files in other folders)
