[package]
name = "agentburn-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
log = "0.4"
pretty_env_logger = "0.5"
bs58 = "0.5"
